# timeseries

./: README  README.md
TimeSeriesUtils/: CMakeLists.txt
TimeSeriesUtils/include/: TimeSeriesUtils.hpp
TimeSeriesUtils/src/: TimeSeriesUtils.cpp
TimeSeriesUtils/test/: SimilarityMeasuresTest.cpp
